Perfiles de Spring: separa configuración por entorno y saca credenciales del código
application.yml queda con lo común y sin una sola credencial. La
configuración específica vive en application-dev.yml y application-prod.yml.

La diferencia clave entre ambos es intencional: dev define un valor por
defecto para cada variable, de modo que `mvn spring-boot:run` funcione sin
configurar nada; prod no define ninguno, así que si falta una variable la
aplicación no arranca. Es preferible un fallo inmediato a arrancar con
credenciales de ejemplo o contra la base equivocada. Como el secreto JWT de
desarrollo existe solo en el perfil dev, no puede llegar a producción por
descuido.

prod además usa ddl-auto: validate en vez de update (la app se niega a
arrancar ante un esquema desalineado en lugar de modificar la base sola),
desactiva el log de SQL y el DEBUG de Spring Security, y deja de devolver
mensajes de excepción al cliente.

Externaliza también los orígenes de CORS, que estaban fijos en
SecurityConfig y obligaban a recompilar para desplegar en otro dominio.

Elimina application.yml.example, redundante con .env.example y con los
perfiles, y que además contenía credenciales ya comprometidas.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>